project cleanup - ready for first release.

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 The NetBeans OpenCL Pack provides tooling for OpenCL applications.
 
 - - - modules - - -
-opencl-editor: basic editor for OpenCL files
+opencl-editor: OpenCL editor
+jocl-runtime: library wrapper module packaging JOCL
 jocl-project: provides the "New OpenCL Project" wizard
